@@ -1,0 +1,50 @@
+/*
+	ConsoleObjectImpl.cpp by Miguel Guzman (Aglanor)
+	Copyright (C) 2002 Miguel Guzman & The Worldforge Project
+
+	This program is free software; you can redistribute it and/or modify
+	it under the terms of the GNU General Public License as published by
+	the Free Software Foundation; either version 2 of the License, or
+	(at your option) any later version.
+
+	This program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU General Public License for more details.
+
+	You should have received a copy of the GNU General Public License
+	along with this program; if not, write to the Free Software
+	Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+*/
+
+// config headers
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
+// system headers
+
+// library headers
+#include <Ogre.h>
+
+// local headers
+#include "MediaDeployer.h"
+
+MediaDeployer* MediaDeployer::_mediaDeployerInstance = 0;
+
+MediaDeployer & MediaDeployer::getSingleton(void)
+{
+	if(_mediaDeployerInstance == 0)
+		_mediaDeployerInstance = new MediaDeployer;
+	return *_mediaDeployerInstance;
+}
+
+MediaDeployer::MediaDeployer(void)
+{
+
+}
+
+MediaDeployer::~MediaDeployer()
+{
+
+}
