@@ -1,3 +1,8 @@
+2003-11-04 Miguel Guzman <aglanor [at] telefonica [dot] net>
+	* README: cleanup of media files, moved to purple.
+	* src/components/ogre/MediaDeployer.(h|cpp):
+	added class to deploy media on demand.
+
 2003-10-30 Miguel Guzman <aglanor [at] telefonica [dot] net>
 	* src/services/components/ogre:
 	Makefile.am, DimeOgre.(h|cpp), ConsoleObjectImpl.(h|cpp):
